--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="slider1"></div>
     <div id="slider2"></div>
 
+    <input class="input" />
     <script src="app.js"></script>
     <script>
       // const slider1 = new Slider({ id: "slider1", borderColor: "red" });
