--- a/dz/index.html
+++ b/dz/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="todo-from-api.js"></script>
+    <!-- <script src="todo-from-api.js"></script> -->
+     <script src="tasks-filter-find-arr.js"></script>
 
   </body>
 </html>
