--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <input class="input" />
     <script src="app.js"></script>
+    <script src="dz/todo-from-api.js"></script>
     <script>
       // const slider1 = new Slider({ id: "slider1", borderColor: "red" });
       // const slider2 = new Slider({ id: "slider2", borderColor: "blue" });
